# vmexam

./: COPYRIGHT.c  Makefile  README.adoc  README.md  git-ls-projects.toml  up.sh  valgrind.supp
1/: .gitignore  Hazi.java  Main.java  Makefile  doc.txt  hazi.cpp
2/: Makefile  README  TODO  doc.txt  hazi.cpp
3/: hazi.cpp
4/: hazi.cpp
a-star/: AboutBNF.html  Main.java  Makefile  doc.txt  hazi.py  hf01_563.txt  hf01_pelda_input.txt  hf01_pelda_output.txt
android/: HACKING  NOTES
ant/: Makefile  build.xml  ecj.xml  hello.java  hello.xml
anyremote/: okular.cfg
asciidoc/: cell-background.asciidoc
asm/: NOTES.adoc
astyle/: build.sh
autoconf/: Makefile.in  autogen.sh  configure.ac
autotools/: Makefile.am  README  autogen.sh  configure.ac
autotools/source/: Makefile.am
avg/: Cargo.toml  README.md
bash/: 2fa  a2beamer  astyle-check  astyle-check-files  astyle-check-myfiles  cert2mail  cgitify  clang-format-check  cpm-wrapper  exif-rename  flv2mp3  fn2exif  fs2exif  gammu2gcal  gcalsync  git-ls-creators  git-mybugfixes  git-mylastweek  git-sort-trees  goobook-wrapper  google-sms  hangout-hack  insert-exif-comments  killparent  mdview  mov2mp4  mplayer-expand  nc-fix-resync  offlineimap  picasuck  power-on-hours  prettyprint  pulse-hack  pushbullet  pushping  scan-build-check-files  scan-document  skype-hack  sleep-until  spam-graph  (+8 more)
binary-dumper/: Cargo.toml  Makefile  README.md  mbr_dumper.py
bitlbee/: NOTES
cap2exif/: Cargo.toml  README.md
chromium/: NOTES.md
clang/: .gitignore  Makefile  README  README.asciidoc  find-unprefixed-members.cxx  rename.cxx  test.c  test.cxx  test.hxx
cmake/: CMakeLists.txt  Makefile  README
cmake-gtk/: CMakeLists.txt
cmake-gtk/source/: main.cxx
cmake/hello/: CMakeLists.txt
cmake/source/: hello.cxx
collaboraonline/: README.md  autogen.env  autogen.env-android  autogen.env-san  autogen.input  autogen.input-android  autogen.input-clang  autogen.input-core  autogen.input-engine  autogen.input-engine-android  autogen.input-engine-clang  autogen.input-engine-san  autogen.input-fuzz  autogen.input-san  autogen.input-symbols  autogen.py  cool-perf  indented-files2-core.txt  run-wsdunit  up-codaw.sh  up-core.sh  up-engine.sh  up.sh
convert/: any2dvd  jpg2pdf  mkv2webm  mp42webm  tikz2png
csp/: Cargo.toml  README.md  csp.py  csp_simple.py  z3_1.py  z3_2.py
csp/src/: cube.rs  lib.rs  main.rs  tests.rs
csp/src/fixtures/: cube.txt  cube2.txt
dioxus/cpm-gui/: Cargo.toml  Dioxus.toml  Makefile  README.md
dioxus/cpm-gui/assets/: main.css
dioxus/cpm-gui/src/: main.rs
dioxus/loim/: Cargo.toml  Dioxus.toml  Makefile  README.md
dioxus/loim/src/: main.rs
dioxus/random-choose/: Cargo.toml  Dioxus.toml  Makefile  README.md
dioxus/random-choose/src/: main.rs
dioxus/rubik-scramble/: Cargo.toml  Dioxus.toml  Makefile  README.md
dioxus/rubik-scramble/assets/: icon.xml  main.css
dioxus/rubik-scramble/src/: main.rs
fit2json/: Cargo.toml  README.md
fit2json/src/: main.rs
fit2json/tools/: publish.sh
git-ls-projects/: Cargo.toml  README.md
git-ls-projects/src/: main.rs
gtktpconv/: .gitignore  CMakeLists.txt
gtktpconv/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
gtktpconv/android/app/src/main/: AndroidManifest.xml
gtktpconv/android/app/src/main/cpp/: native-lib.cpp
gtktpconv/android/app/src/main/java/hu/vmiklos/tpconv/: MainActivity.java
gtktpconv/android/app/src/main/res/layout/: activity_main.xml
gtktpconv/android/app/src/main/res/values/: strings.xml
gtktpconv/android/gradle/wrapper/: gradle-wrapper.properties
gtktpconv/android/scripts/: up.sh
gtktpconv/core/: CMakeLists.txt
gtktpconv/core/include/: lib.hxx
gtktpconv/core/qa/: test.cxx  tpconvtest.cxx
gtktpconv/core/source/: lib.cxx
gtktpconv/docs/: README.txt
gtktpconv/gtk/: main.cxx
gtktpconv/qa/: test.cxx
gtktpconv/scripts/: pack.py  up.sh
gtktpconv/source/: lib.cxx  lib.hxx  main.cxx
gtktpconv/windows/: README  pack.py
ics2txt/: Cargo.toml  README.md
ics2txt/src/: lib.rs  main.rs  tests.rs
ics2txt/src/fixtures/: different-tz.ics  empty-summary.ics  missing-dtstart.ics  missing-summary.ics  no-time.ics  none-tz.ics  same-tz.ics
js/loregression/: Makefile  configure.ac  index.html  main.ts  package.json
nextcloud-open/: Cargo.toml  README.md
nextcloud-open/src/: lib.rs  main.rs  serde.rs  tests.rs
nextcloud-open/src/fixtures/network/: webdav-input.xml  webdav-output.xml
osm/addr-osmify-cpp/: .clang-tidy  CMakeLists.txt  Makefile  README  README.adoc  addr-osmify.cxx  coverage.sh  lib.cxx  lib.hxx  main.cxx  mapping.imp  test.cxx  up.sh  urllib.cxx  urllib.hxx
osm/addr-osmify-cpp/mock/: https:%2F%2Fnominatim.openstreetmap.org%2Fsearch.php?q=M%25C3%25A9sz%25C3%25A1ros%2520utca%252058%252Fa%252C%2520Budapest&format=json-overpass-noresult  https:%2F%2Foverpass-api.de%2Fapi%2Finterpreter-no-buildings.expected-data  https:%2F%2Foverpass-api.de%2Fapi%2Finterpreter-nominatim-badjson  https:%2F%2Foverpass-api.de%2Fapi%2Finterpreter-overpass-badjson.expected-data  overpass-no-buildings.json  overpass-no-result.json
pdfcal/: Cargo.toml  Makefile  README.md  pcal-4.11.0-order.patch  pdfcal.py  requirements.txt
pdfcal/src/: main.rs
pushping/: Cargo.toml  README.md
pushping/src/: lib.rs  main.rs  tests.rs
qemu/exec-server/: Cargo.toml  README.md
qemu/exec-server/src/: main.rs
rubik/: Cargo.toml  README.md  build.rs
rubik/src/: lib.rs  main.rs
rust/bindgen/vmexam-rouille/: Cargo.toml
rust/bindgen/vmexam-rouille/src/: main.rs
send-email/: Cargo.toml  README.md
send-email/src/: main.rs
share-vmiklos-hu-apps/: Cargo.toml  README.md  share-vmiklos-hu-apps.service
share-vmiklos-hu-apps/src/: calc.rs  hyphen.rs  main.rs  rubik.rs  rubik_scramble.rs  yattag.rs
strava-mirror/: Cargo.toml  README.md
strava-mirror/src/: lib.rs  main.rs  tests.rs
strava-mirror/src/fixtures/: activities-0.json  activities-1.json  activities-2.json  activity1.json  activity2.json  strava-mirrorrc  token.json
weesearch/: Cargo.toml  README.md
weesearch/src/: lib.rs  main.rs  tests.rs
(+1207 files in other folders)
