[package]
name = "csp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.4", features = ["derive"] }
num_enum = "0.7.3"
puzzle-solver = "0.4.1"
strum = "0.27.1"
strum_macros = "0.27.1"
