[package]
name = "csp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
num_enum = "0.7.6"
puzzle-solver = "0.4.1"
strum = "0.28.0"
strum_macros = "0.28.0"
