[package]
name = "fit2json"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tempfile = "3.10.1"
