[package]
name = "git-ls-projects"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = "4.5.4"
glob = "0.3.1"
home = "0.5.9"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["local-offset", "serde-well-known"] }
toml = "0.8.13"
