[package]
name = "git-ls-projects"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = "4.6.1"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.51", features = ["local-offset", "serde-well-known"] }
toml = "1.1.2"
