[package]
name = "pushping"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
gethostname = "1.0.2"
home = "0.5.11"
isahc = "1.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.37", features = ["formatting", "local-offset", "macros"] }
toml = "0.9.0"
vfs = "0.12.1"
