[package]
name = "rubik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.44", features = ["derive"] }
rand = "0.9.2"
kewb = "0.4.2"

[build-dependencies]
kewb = "0.4.2"
