[package]
name = "send-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.1.4", features = ["derive"] }
home = "0.5.5"
lettre = "0.10.4"
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.8.0"
