[package]
name = "send-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
home = "0.5.9"
lettre = "0.11.9"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
