[package]
name = "send-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
home = "0.5.11"
lettre = "0.11.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
