[package]
name = "share-vmiklos-hu-apps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
evalexpr = "11.1.0"
html-escape = "0.2.13"
hyphen = { path = "../hyphen" }
rouille = "3.6.2"
kewb = "0.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[build-dependencies]
kewb = "0.4.0"
