[package]
name = "share-vmiklos-hu-apps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
evalexpr = "12.0.2"
html-escape = "0.2.13"
hyphen = { path = "../hyphen" }
rouille = "3.6.2"
rubik = { path = "../rubik" }
kewb = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
kewb = "0.4.1"
