[package]
name = "strava-mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
isahc = { version = "1.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml = "0.8"
home = "0.5"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
