[package]
name = "strava-mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
home = "0.5"
isahc = { version = "1.7", features = ["json"] }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
simplelog = "0.12.2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde", "local-offset"] }
toml = "0.8"
