[package]
name = "weesearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.7"
home = "0.5.5"
regex = "1.10.2"
time = { version = "0.3.30", features = ["formatting", "macros", "local-offset"] }
unidecode = "0.3.0"
