[package]
name = "cpm-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
