[package]
name = "rubik-scramble"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.2", features = [] }
kewb = "0.4.2"
rubik = { path = "../../rubik" }

[dependencies.getrandom]
version = "0.3.4"
optional = true
features = []

[features]
default = ["web"]
web = ["dioxus/web", "getrandom/wasm_js"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[build-dependencies]
kewb = "0.4.3"
