[package]
name = "rubik-scramble"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.3", features = [] }
kewb = "0.4.2"
rubik = { path = "../../rubik" }

[dependencies.getrandom]
version = "0.3.4"
optional = true
features = []

[dependencies.web-sys]
version = "0.3.83"
optional = true
features = ["Storage"]

[dependencies.preferences]
version = "2.0.0"
optional = true

[features]
default = ["web"]
web = ["dioxus/web", "getrandom/wasm_js", "web-sys"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile", "preferences"]

[build-dependencies]
kewb = "0.4.3"
