[package]
name = "exec-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
rouille = "3.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32_System_Threading"] }
