[package]
name = "vmexam-rouille"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.50"
hyphen = { path = "../hyphen" }
rouille = "3.4.0"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.72"
